Spelling fixes for all

--- a/localisation/KR_Philippines_l_english.yml
+++ b/localisation/KR_Philippines_l_english.yml
@@ -379,15 +379,13 @@ phil.86.d:0 "The Americans have decided that we should be an independent country
 phil.86.a:0 "Full Independence and Nothing Else!"
 phil.86.b:0 "Accept their proposal"
 phil.87.t:0 "The Philippines want full independence"
-phil.87.d:0 "The Philippines have rejected our proposal of granting them independence instead claiming that we should grant them full freedom without any strings attached. The attitude in Washington is split. A number of politicians suggest giving full independence to them while others suggest that since they rejected our offer to reenforce the Status quo though this option might lead to a war."
+phil.87.d:0 "The Philippines have rejected our proposal of granting them independence instead claiming that we should grant them full freedom without any strings attached. The attitude in Washington is split. A number of politicians suggest giving full independence to them while others suggest that since they rejected our offer to reinforce the Status quo though this option might lead to a war."
 phil.87.a:0 "Give it to them!"
 phil.87.b:0 "No!"
 phil.88.t:0 "The Americans say No!"
 phil.88.d:0 "The Americans have said No that we shall not have independence and the status quo shall be re-enforced. This is an outrage and many within the Philippines are suggesting that we declare war to earn our independence. However others are warning that a war against the Americans will only end in massive bloodshed for the Philippines."
 phil.88.a:0 "We shall fight for our rights!"
 phil.88.b:0 "Lets not risk it"
-
-
 
 
 
