--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -296,7 +296,7 @@ POL_the_peoples_king_desc:0 "Augustyn I Czartoryski, or "The People's King" as h
 POL_prussian_partition:0 "The Prussian Partition"
 POL_prussian_partition_desc:0 "The German Empire is showing weakness and is distracted by a cataclysmic war. This is a perfect opportunity for us to reassert our claims to the Polish land Germany unjustly holds in their clutches."
 POL_ukranian_alliance:0 "A Ukrainian Alliance"
-POL_ukranian_alliance_desc:0 "Our neighbor Ukraine has joined us in becoming a Syndicalist power, and it is only natural that we approach them with an offer of alliance."
+POL_ukranian_alliance_desc:0 "Our neighbour Ukraine has joined us in becoming a Syndicalist power, and it is only natural that we approach them with an offer of alliance."
 POL_central_arms:0 "Państwowe Wytwórnie Uzbrojenia"
 POL_central_arms_desc:0 "The Państwowe Wytwórnie Uzbrojenia is an industrial conglomerate that controls a large portion of Polish arms manufacturing. Increasing their authority and giving them leniency in the law will allow them to further strengthen Polish arms manufacturing."
 POL_combined_arms:0 "Combined Arms"
@@ -1182,7 +1182,7 @@ poland.208.f:0 "Let us choose the Russian T-25."
 poland.208.g:0 "Let us choose the Soviet T-25."
 poland.208.h:0 "Let us create our own design, instead."
 poland.209.t:0 "Signing the Pacta Conventa"
-poland.209.d:0 "A long-standing tradition of the old Polish-Lithuanian Commonwealth, the Pacta Conventa was a contractual agreement between the people of Poland and the newly elected king. These pacts were continuously signed by elected kings from 1573 to 1764 as a sign of good faith on the part of the monarch. This pact affirmed the king's pledges to the nation, and was written uniquely for each king to sign upon election to the Polish throne. \n\nAs a symbolic gesture of King [POL.GetLeader]'s ascencion to the throne, the Sejm has written a new Pacta Conventa for the king to sign. A king has not ruled the polish people for almost 150 years, and many have come to see the king's signing of this document as the de facto beginning of Poland's new age in the modern world."
+poland.209.d:0 "A long-standing tradition of the old Polish-Lithuanian Commonwealth, the Pacta Conventa was a contractual agreement between the people of Poland and the newly elected king. These pacts were continuously signed by elected kings from 1573 to 1764 as a sign of good faith on the part of the monarch. This pact affirmed the king's pledges to the nation, and was written uniquely for each king to sign upon election to the Polish throne. \n\nAs a symbolic gesture of King [POL.GetLeader]'s ascension to the throne, the Sejm has written a new Pacta Conventa for the king to sign. A king has not ruled the polish people for almost 150 years, and many have come to see the king's signing of this document as the de facto beginning of Poland's new age in the modern world."
 poland.209.a:0 "With this signature, a new age begins."
 
 ### Global Flags ###
