--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -286,7 +286,7 @@ RUS_anti_bolshevik_idea:0 "Anti-Bolshevik Policies"
 rus_sav_econ:0 "Economy for the army"
 rus_sav_econ_desc:0 "Though Savinkov's government started to revive our economy, but the military factories get more attention than the others. Many people are not satisfied with such a policy."
 rus_sav_econ1:0 "Nation and Army stay together!"
-rus_sav_econ1_desc:0 "We could finally reorganize our economy, including the civil industry, but the stabilization of the economy will take some time."
+rus_sav_econ1_desc:0 "We could finally reorganise our economy, including the civil industry, but the stabilisation of the economy will take some time."
 RUS_Vroom:0 "Limousine 'Triumph'"
 RUS_Dmi_Tri:0 "Dmitri Romanov controls the Senate"
 
@@ -402,9 +402,9 @@ RUS_CON_IND1_desc:0 "Private property has long been under threat by the Syndical
 RUS_CON_IND2:0 "Mechanisation of Agriculture"
 RUS_CON_IND2_desc:0 "A majority of all Russian farms in the nation are still worked on with hands and hooves. This has kept Russian economy stagnated for long enough, a large state-sponsored mechanisation must be initiated!"
 RUS_CON_IND3:0 "Construction brigades"
-RUS_CON_IND3_desc:0 "With the much-needed mechanisation initiated we should set up new factories. With less and less farmhands needed on the countryside we should organize temporary construction teams called 'Construction brigades' and put these young, able men to work at our factory lines."
+RUS_CON_IND3_desc:0 "With the much-needed mechanisation initiated we should set up new factories. With less and less farmhands needed on the countryside we should organise temporary construction teams called 'Construction brigades' and put these young, able men to work at our factory lines."
 RUS_CON_IND4:0 "MinProm"
-RUS_CON_IND4_desc:0 "Ministry of Industry or 'MinProm' in Russian is a united ministry, which will reorganize the industry in our country. One of the most important missions for 'Minprom' is to find new resources for our growing economy. We hope that it won't be very difficult since Russia is still one of the biggest countries in the World."
+RUS_CON_IND4_desc:0 "Ministry of Industry or 'MinProm' in Russian is a united ministry, which will reorganise the industry in our country. One of the most important missions for 'Minprom' is to find new resources for our growing economy. We hope that it won't be very difficult since Russia is still one of the biggest countries in the World."
 RUS_CON_POL1:0 "A New Constitution"
 RUS_CON_POL1_desc:0 "With the monarch in place we would need a new constitution which clearly outlines the amount of influence the monarch should have in comparison to the senate and the duma. This is a time of change and many voices wish to be heard."
 RUS_CON_POL2:0 "Imperial Free Academies"
@@ -1187,7 +1187,7 @@ received_equipment_2000:0 "You received §G2000§! infantry equipment from that 
 received_equipment_5000:0 "You received §G5000§! infantry equipment from that country"
 
 russia.25.t:0 "Reorganisation of the Internal police"
-russia.25.d:0 "With the rise of internal dissent, the government has to grant itself an internal police able to actively hunt down the protestors."
+russia.25.d:0 "With the rise of internal dissent, the government has to grant itself an internal police able to actively hunt down the protesters."
 russia.25.a:0 "A good idea!"
 
 unlock_okhrana_tooltip:0 "The national focus 'Okhranka' has been unlocked in the focus tree!"
