--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -102,7 +102,7 @@ SPR_plea_for_peace_desc:0 "Unrest is rife across the land - it is time for the p
 SPR_focus_economy:0 "Focus on the Economy"
 SPR_focus_economy_desc:0 "The main issue facing Spain is one of massive unemployment and economic hardship. Until we address these issues, the people will continue to be restless and listen to whatever hot-headed revolutionary that comes along next. The issues don't truly matter, do they?"
 SPR_construction_focus:0 "New Construction"
-SPR_construction_focus_desc:0 "Revitalizing the economy will require building: factories, roads, railways, arms... and putting people to work on the construction will keep their minds off of other concerns."
+SPR_construction_focus_desc:0 "Revitalising the economy will require building: factories, roads, railways, arms... and putting people to work on the construction will keep their minds off of other concerns."
 SPR_civ_production:0 "New Factories"
 SPR_civ_production_desc:0 "While state-sponsored factories are never the most efficient, this will be a way for us to get the people working... and for more trade to flow into Spain. Everyone will benefit!"
 SPR_new_jobs:0 "Jobs for the People"
@@ -143,7 +143,7 @@ SPR_expand_industry_1:0 "Expand Our Industry"
 SPR_expand_industry_1_desc:0 "We must focus on expanding our civilian industry, to increase Spain's trade potential and our place as a powerhouse in Europe."
 SPR_expand_mines_1:0 "Expand New Mines"
 SPR_expand_mines_1_desc:0 "There are resources yet untapped in Spain, mines that new technology allow us to finally access. We must take advantage of them."
-SPR_expand_industry_2:0 "Exand Our Industry Further"
+SPR_expand_industry_2:0 "Expand Our Industry Further"
 SPR_expand_industry_2_desc:0 "We must continue our focus on expanding our civilian industry, to increase Spain's trade potential and our place as a powerhouse in Europe."
 SPR_trade_focus:0 "Focus on Trade"
 SPR_trade_focus_desc:0 "We must seek out new markets for Spanish goods, as well as arrange trade treaties to acquire the raw resources we so desperately need."
@@ -166,7 +166,7 @@ SPR_standing_army_desc:0 "We must focus on our army's strength and quality, inst
 SPR_mobile_army:0 "A Mobile Army"
 SPR_mobile_army_desc:0 "The ways of footsoldiers and horses will soon be a thing of the past, if they are not already. The cost of equipping our forces with vehicles will be high, but it is necessary."
 SPR_new_equipment:0 "Update the Army's Equipment"
-SPR_new_equipment_desc:0 "We must focus on modernizing our army's equipment, much of which dates back to the Weltkrieg. This will not do."
+SPR_new_equipment_desc:0 "We must focus on modernising our army's equipment, much of which dates back to the Weltkrieg. This will not do."
 SPR_motor_focus:0 "Spanish Motorworks"
 SPR_motor_focus_desc:0 "We must get our soldiers off their feet, and focus on giving them the kind of mobility which will give us an advantage."
 SPR_artillery_focus:0 "Artillery Focus"
@@ -174,7 +174,7 @@ SPR_artillery_focus_desc:0 "Firepower - this is what we most desperately need. T
 SPR_tank_focus:0 "The Spanish Panzer Corps"
 SPR_tank_focus_desc:0 "Heavy armor - it provides both speed and firepower, and it is our clear path to victory in the wars to come."
 SPR_army_innovation:0 "Army Innovation"
-SPR_army_innovation_desc:0 "Above all else, we must ensure our army has the finest minds behind it to plan our offense and defense. Without them, all the fine equipment in the world will do us nothing."
+SPR_army_innovation_desc:0 "Above all else, we must ensure our army has the finest minds behind it to plan our offence and defence. Without them, all the fine equipment in the world will do us nothing."
 
 SPR_air_academy:0 "Academia Básica del Aire"
 SPR_air_academy_desc:0 "After the end of a war, it has been proposed to create of a new Air Force Academy where our glorious air forces can be trained and new aeronautical doctrines researched. This will require a low cost for us and should give great advantages to our air forces."
@@ -190,7 +190,7 @@ SPR_naval_academy_desc:0 "There are several naval academies in operation through
 SPR_shipyards:0 "The Barcelona Shipyards"
 SPR_shipyards_desc:0 "Upgrading the aging shipbuilding facilities in Barcelona is our most promising path to building a truly powerful Spanish fleet."
 SPR_expand_navy:0 "Exand the Navy"
-SPR_expand_navy_desc:0 "We must focus on researching new types of ships, to keep our bavy from lagging behind nations who have been at it for far longer. If we cannot have strength of numbers, we will have quality."
+SPR_expand_navy_desc:0 "We must focus on researching new types of ships, to keep our navy from lagging behind nations who have been at it for far longer. If we cannot have strength of numbers, we will have quality."
 SPR_navy_focus:0 "Rule the Seas"
 SPR_navy_focus_desc:0 "It is a basic fact that we cannot be both a naval power and an airforce power - so we have chosen to rule the seas, and to gear our industry towards producing the kind of naval power which will make superiority over the seas something we can achieve."
 
@@ -201,7 +201,7 @@ SPR_join_germany_desc:0 "Our place lies at Germany's side - let us join Mitteleu
 SPR_join_entente:0 "Join the Entente"
 SPR_join_entente_desc:0 "Our place lies with our traditional allies, the British. We must help them regain their lands, and add our force to theirs in order to scour syndicalism from the face of the world."
 SPR_isolation:0 "We Stand Alone"
-SPR_isolation_desc:0 "Truly, Spain has no interest in joining in the larger conflicts of the world. We have seen enough troubles. For now, we rebuild and look to our own defense."
+SPR_isolation_desc:0 "Truly, Spain has no interest in joining in the larger conflicts of the world. We have seen enough troubles. For now, we rebuild and look to our own defence."
 SPR_guard_border:0 "Guard the Borders"
 SPR_guard_border_desc:0 "The many paths over the Pyrennes are our only weakness. We must fortify the border, to ensure no-one pushes into Spanish territory while we can yet defend it."
 SPR_bourbon_throne:0 "Claim the Bourbon Throne"
