--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -403,7 +403,7 @@ tram.101.t:0 "The Japanese are trying to remove Wojciechowski!"
 tram.101.d:0 "The Japanese believe Wojciechowski has outlived his usefulness and have approached the elite of Transamur with the plan of backing a coup d'etat to replace him with someone more useful."
 
 tram.102.t:0 "Admiral Kolchak was killed"
-tram.102.d:0 "The leader of 1925 coup, rogue admiral Alexandr Kolchak was recently killed by his own soldiers during the military coup in his belowed Transamur state. A man of great ambitions, he had contested our rights to rule the Russian Republic until his last breath. With his death, our society become a bit more pacified."
+tram.102.d:0 "The leader of 1925 coup, rogue admiral Alexandr Kolchak was recently killed by his own soldiers during the military coup in his beloved Transamur state. A man of great ambitions, he had contested our rights to rule the Russian Republic until his last breath. With his death, our society become a bit more pacified."
 tram.102.a:0 "So, the bastard is gone. Excellent!"
 
 ### Parties ###
@@ -510,9 +510,9 @@ TRM_Air_Bases_Nov:0 "Expand Novosibirsk Airbases"
 TRM_Crisis:0 "Anti-Kolchak Coup"
 TRM_Crisis_desc:0 "The thing are going out of control. No matter what happened during the coup, political situation will change greatly."
 TRM_Kolchak:0 "Reinforce Kolchak's Authority"
-TRM_Kolchak_desc:0 "Kolchak has managed to survive the coup and defeat rebelious generals. However, the spirit of uncertainty mves through Vladivostok. Only the strong leader will pacify the people and restore order in Transamur."
+TRM_Kolchak_desc:0 "Kolchak has managed to survive the coup and defeat rebellious generals. However, the spirit of uncertainty moves through Vladivostok. Only the strong leader will pacify the people and restore order in Transamur."
 TRM_Kolchak_Purge:0 "Purge the Army"
-TRM_Kolchak_Purge_desc:0 "To avoid any further coups and rebelions the whole apparatus of military high command must be inspected. No doubt, there is still some haters of Kolchak's government, who must be removed from their offices. However, these harsh measures will disrupt our army for some time."
+TRM_Kolchak_Purge_desc:0 "To avoid any further coups and rebellions the whole apparatus of military high command must be inspected. No doubt, there is still some haters of Kolchak's government, who must be removed from their offices. However, these harsh measures will disrupt our army for some time."
 TRM_Kolchak_Mil:0 "Vladivostok Arsenals"
 TRM_Kolchak_Mil_desc:0 "The world is close to see the new Weltkrieg will begin soon. This war will test our spirits, so we must be prepared. We must expand our facilities to produce even more equipment."
 TRM_Kolchak_Doc:0 "Supreme Ruler"
@@ -536,9 +536,9 @@ TRM_Yui_End_desc:0 "Russian's resistance to our cultural assimilation is even st
 TRM_Rep:0 "Democracy Prevails"
 TRM_Rep_desc:0 "We have finally achieved our freedom. No more dictators, no more mad militarists. It's time for true democracy to rise and wipe all the presence of autocrats."
 TRM_Rep_Res:0 "Invests in Science"
-TRM_Rep_Res_desc:0 "Science is everything nowdays. We should invest some money in our great minds. If we create a proper work conditions for them, their efforts will be even more effective."
+TRM_Rep_Res_desc:0 "Science is everything nowadays. We should invest some money in our great minds. If we create a proper work conditions for them, their efforts will be even more effective."
 TRM_Rep_Fac:0 "Invests in Industry"
-TRM_Rep_Fac_desc:0 "Further investitions will allow us to expand our facilities and make our industry more productive. Many new workplaces can be created, what means many people will find a stable jobs."
+TRM_Rep_Fac_desc:0 "Further investment will allow us to expand our facilities and make our industry more productive. Many new workplaces can be created, what means many people will find a stable jobs."
 TRM_Rep_Goods:0 "Build Up a Welfare State"
 TRM_Rep_Goods_desc:0 "True democracy means that every citizen of our country deserve the best. By introducing the welfare system, we will gain many respects form our people. Happy population will work harder and demand less, what mean a prosperity for all of us."
 TRM_Pol_Research:0 "Major Educational Reform"
