Minor fixes all over the place

--- a/localisation/KR_Black_monday_l_english.yml
+++ b/localisation/KR_Black_monday_l_english.yml
@@ -66,5 +66,5 @@ black.50.e:0 "Announce a new economic cooperation plan with our neighbours!"
 
 ### Austria and Black Monday ###
 black.200.t:0 "Black Monday hits Austria"
-black.200.d:0 "As soon as Black Monday struck Germany, it would not be long before its shockwave rippled across Europe, and Austria was among the first to be hit. The economy struggles and troubling times lie ahead of us."
+black.200.d:0 "Black Monday has hit Germany and it would not be long before its shock-wave rippled across Europe. Given it's close proximity, Austria was among the first to affected. The economy is struggling and troubling times lie ahead."
 black.200.a:0 "Ach, Gott!"
