--- a/localisation/KR_Brazil_l_english.yml
+++ b/localisation/KR_Brazil_l_english.yml
@@ -183,7 +183,7 @@ BRA_worker_milita_desc:0 "Many worker’s militias were formed into the war, and
 BRA_a_new_dawn:0 "A New Dawn"
 BRA_a_new_dawn_desc:0 "The old capitalist constitution still stands, a living offence to the workers who bled for freedom. Let us honour their sacrifice and draft a new constitution which properly takes all Brazilians as equals"
 BRA_totalism:0 "Total Revolution"
-BRA_totalism_desc:0 "Only a totalist dictatorship of the proletariat can keep Brazil truly safe from the gnawing claws of Imperialism. We must act quickly and decisively if the Revolution is to survive!"
+BRA_totalism_desc:0 "Only a Totalist dictatorship of the proletariat can keep Brazil truly safe from the gnawing claws of Imperialism. We must act quickly and decisively if the Revolution is to survive!"
 BRA_congresses_anl:0 "Congress of Trade Unions"
 BRA_congresses_anl_desc:0 "Instead of the old Capitalist parliament, we will have a yearly congress of trade unions, which will decide a great many questions of the nation, and the voice of the people will be truly heard at last"
 BRA_prepare_for_reactionaries:0 "Prepare for the Reactionary Backslash"
