--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -268,12 +268,12 @@ CSA_found_american_raido_desc:0 "It has been proposed that we merge the various 
 CSA_found_the_cia:0 "Found the CIA"
 CSA_found_the_cia_desc:0 "The revolution has taught us that we need to have espionage. It is a necessary evil, but it is necessary. Thus we shall create the Central Intelligence Agency. This will keep America safe from the reactionaries and help us promote syndicalism in other countries covertly. The CIA will be our sword in the darkness to strike against reactionaries wherever they may hide."
 CSA_centralized_union:0 "Centralised Union"
-CSA_centralized_union_desc:0 "After several days of heated debate between the delegates in Philadelphia, the Centralists were victorious. Their ideal of a centralised totalist Federal government. For the Revolution to bring forth we shall have a centralised union."
+CSA_centralized_union_desc:0 "After several days of heated debate between the delegates in Philadelphia, the Centralists were victorious. Their ideal of a centralised Totalist Federal government. For the Revolution to bring forth we shall have a centralised union."
 CSA_centralist_victory_tooltip:0 "The Centralists will need to be victorious in the convention"
 CSA_revolutionary_guards:0 "Revolutionary Guards"
 CSA_revolutionary_guards_desc:0 "In order to protect the Revolutionary ideals of the revolution, we need to form an elite revolutionary guards that shall protect the ideals of the revolution. This will prevent any and all counter-revolutionaries from opposing our glorious revolution."
 CSA_democratic_centralism:0 "Democratic Centralism"
-CSA_democratic_centralism_desc:0 "Factionalism breads death and destroys the revolution. Thus we shall promote the totalists ideal of Democratic Centralism. We need democracy, but we also need to avoid factionalism where counter-revolutionaries can slip in."
+CSA_democratic_centralism_desc:0 "Factionalism breads death and destroys the revolution. Thus we shall promote the Totalists ideal of Democratic Centralism. We need democracy, but we also need to avoid factionalism where counter-revolutionaries can slip in."
 CSA_reactionary_purge:0 "Purge the Reactionaries"
 CSA_reactionary_purge_desc:0 "It is time to purge any and all reactionaries from harming our republicans. We know that there are many counter-revolutionaries throughout the Republic. Purging them from our republic will preserve our revolutionary democracy. Those that oppose this, are obviously in league with the traitors to the country and are just as guilty."
 CSA_ussa:0 "U.S.S.A"
