--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -1,6 +1,5 @@
 ﻿l_english:
 
-
 ### Focuses ###
 GER_doctrine_new:0 "Military Reform"
 GER_doctrine_new_desc:0 "After the death of Hans von Seeckt and the retirement of August von Mackensen, the Chief of General Staff has been involved in constant debate over which methods the German Army should use as a tactical basis, or doctrine."
@@ -148,7 +147,7 @@ GER_groener1:0 "Liquidate unprofitable estates"
 GER_groener1_desc:0 "-"
 GER_groener2:0 "Reichsarbeitsdienst"
 GER_groener3:0 "The Sale of Ceylon"
-GER_groener3_desc:0 "The island of Ceylon is a very unprofitable part of our colonial empire, requiring massive investions every year. However, there have been proposals of selling the island to the Princely Federation - without doubt a profitable idea."
+GER_groener3_desc:0 "The island of Ceylon is a very unprofitable part of our colonial empire, requiring massive investment every year. However, there have been proposals of selling the island to the Princely Federation - without doubt a profitable idea."
 GER_schacht1:0 "Bail out Junker Estates"
 GER_schacht1_desc:0 "-"
 GER_schacht2:0 "Investitionsprogramm"
@@ -1099,7 +1098,7 @@ GER_mackensen_retires:0 "You can now reform the military command"
 GER_army_reform:0 "You can now reform the military command"
 german_panzers:0 "New Panzer divisions will be built"
 naval_construction:0 "Naval construction projects will begin."
-GER_ECO_REFORM:0 "6 months after black Monday"
+GER_ECO_REFORM:0 "6 months after Black Monday"
 FAUD_ban1:0 "Take no chances with these reds!"
 FAUD_allow:0 "The FAUD has been allowed to operate"
 ENG_GER_protection:0 "Protecting Ireland"
