--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -633,7 +633,7 @@ IRE_IIA_desc:0 "The refugee population that we have received from North America 
 
 # Syndicalist Congress
 IRE_ACS:0 "An Chomhdháil Siondacáiteach"
-IRE_ACS_desc:0 "Now that James Connolly's dream has been made a reality, we are set to replace the provisional government. The three factions are the radical socialist nationalists of Saor Éire led by Betty Sinclair and Peadar O'Donnell, the syndicalist Irish Worker League led by Jim Larkin and his former rival William X. O'Brien, and the Revolutionary Workers Group led by totalist Sean Murray and Jim Gralton."
+IRE_ACS_desc:0 "Now that James Connolly's dream has been made a reality, we are set to replace the provisional government. The three factions are the radical socialist nationalists of Saor Éire led by Betty Sinclair and Peadar O'Donnell, the syndicalist Irish Worker League led by Jim Larkin and his former rival William X. O'Brien, and the Revolutionary Workers Group led by Totalist Sean Murray and Jim Gralton."
 
 # Ulster Question Wing
 IRE_SOU:0 "The Status of Ulster"
