--- a/localisation/KR_Union_of_Britain_l_english.yml
+++ b/localisation/KR_Union_of_Britain_l_english.yml
@@ -738,17 +738,17 @@ uob.351.a:0 "Onwards, British industry! Build, build, build!"
 uob.351.b:0 "We must aid our deprived citizens!"
 uob.352.t:0 "The office of the Exchequer"
 uob.352.d:0 "Many candidates have put themselves forward for the important role of Commissary for the Exchequer, each with different arguments for where the Union should go with her industry."
-uob.352.aa:0 "Clem Attlee, to build a new Jerusalem for British Socialism!"
-uob.352.ab:0 "Nye Bevan, to take advantage of our great resources!"
-uob.352.ac:0 "Barbara Castle, to protect Britain's families from poverty!"
-uob.352.ad:0 "The current Commissary is doing a fine job."
+uob.352.a:0 "Clem Attlee, to build a new Jerusalem for British Socialism!"
+uob.352.b:0 "Nye Bevan, to take advantage of our great resources!"
+uob.352.c:0 "Barbara Castle, to protect Britain's families from poverty!"
+uob.352.d:0 "The current Commissary is doing a fine job."
 uob.353.t:0 "The office of Commissary for Foreign Affairs"
 uob.353.d:0 "The Chair has now called on the Congress to elect its Commissary for Foreign Affairs."
-uob.353.aa:0 "Ernest Bevin, to take an uncompromising stance against our adversaries!"
-uob.353.ab:0 "Leslie Solley, to cement relations with the new Europe!"
-uob.353.ac:0 "Ian Mikardo will protect British interests above all else!"
-uob.353.ad:0 "Ian Mikardo will protect British interests above all else!"
-uob.353.ae:0 "The current Commissary is doing a fine job."
+uob.353.a:0 "Ernest Bevin, to take an uncompromising stance against our adversaries!"
+uob.353.b:0 "Leslie Solley, to cement relations with the new Europe!"
+uob.353.c:0 "Ian Mikardo will protect British interests above all else!"
+uob.353.d:0 "Ian Mikardo will protect British interests above all else!"
+uob.353.e:0 "The current Commissary is doing a fine job."
 uob.354.t:0 "The office of Commissary for the Home Department"
 uob.354.d:0 "The Chair has now called on the Congress to elect its Commissary for the Home Department."
 uob.354.a:0 "Herbert Morrison is a man the people trust!"
