--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -273,7 +273,7 @@ STATE_270:0 "Pitcairn Island"
 STATE_271:0 "Ethiopia"
 STATE_272:0 "Senegal"
 STATE_273:0 "Libyan Desert"
-STATE_274:0 "Gold Küste"
+STATE_274:0 "Goldküste"
 STATE_275:0 "Transvaal"
 STATE_276:0 "Southern Ontario"
 STATE_277:0 "Mexico City"
