--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -548,9 +548,9 @@ BFA_market_liberal_DEF:0 "Mossiland"
 BFA_social_conservative:0 "Mossiland"
 BFA_social_conservative_ADJ:0 "Mossi"
 BFA_social_conservative_DEF:0 "Mossiland"
-BFA_authoritarian_democrat:0 "Upper Volta"
-BFA_authoritarian_democrat_ADJ:0 "Voltan"
-BFA_authoritarian_democrat_DEF:0 "Upper Volta"
+BFA_authoritarian_democrat:0 "Mossiland"
+BFA_authoritarian_democrat_ADJ:0 "Mossi"
+BFA_authoritarian_democrat_DEF:0 "Mossiland"
 BFA_paternal_autocrat:0 "Mossiland"
 BFA_paternal_autocrat_ADJ:0 "Mossi"
 BFA_paternal_autocrat_DEF:0 "Mossiland"
@@ -1209,33 +1209,33 @@ CHI_national_populist:0 "Republic of China"
 CHI_national_populist_ADJ:0 "Republican Chinese"
 CHI_national_populist_DEF:0 "The Republic of China"
 
-CHL_totalist:0 "Chilean Socialist Republic"
+CHL_totalist:0 "Chile"
 CHL_totalist_ADJ:0 "Chilean"
-CHL_totalist_DEF:0 "Chilean Socialist Republic"
-CHL_syndicalist:0 "Syndicalist Republic of Chile"
+CHL_totalist_DEF:0 "Chile"
+CHL_syndicalist:0 "Chile"
 CHL_syndicalist_ADJ:0 "Chilean"
-CHL_syndicalist_DEF:0 "Syndicalist Republic of Chile"
+CHL_syndicalist_DEF:0 "Chile"
 CHL_radical_socialist:0 "Chile"
 CHL_radical_socialist_ADJ:0 "Chilean"
 CHL_radical_socialist_DEF:0 "Chile"
 CHL_social_democrat:0 "Chile"
 CHL_social_democrat_ADJ:0 "Chilean"
 CHL_social_democrat_DEF:0 "Chile"
-CHL_social_liberal:0 "Chile"
+CHL_social_liberal:0 "Republic of Chile"
 CHL_social_liberal_ADJ:0 "Chilean"
-CHL_social_liberal_DEF:0 "Chile"
-CHL_market_liberal:0 "Chile"
+CHL_social_liberal_DEF:0 "Republic of Chile"
+CHL_market_liberal:0 "Republic of Chile"
 CHL_market_liberal_ADJ:0 "Chilean"
-CHL_market_liberal_DEF:0 "Chile"
-CHL_social_conservative:0 "Chile"
+CHL_market_liberal_DEF:0 "Republic of Chile"
+CHL_social_conservative:0 "Republic of Chile"
 CHL_social_conservative_ADJ:0 "Chilean"
-CHL_social_conservative_DEF:0 "Chile"
-CHL_authoritarian_democrat:0 "Chile"
+CHL_social_conservative_DEF:0 "Republic of Chile"
+CHL_authoritarian_democrat:0 "Nationalist Chile"
 CHL_authoritarian_democrat_ADJ:0 "Chilean"
-CHL_authoritarian_democrat_DEF:0 "Chile"
-CHL_paternal_autocrat:0 "Chile"
+CHL_authoritarian_democrat_DEF:0 "Nationalist Chile"
+CHL_paternal_autocrat:0 "Nationalist Chile"
 CHL_paternal_autocrat_ADJ:0 "Chilean"
-CHL_paternal_autocrat_DEF:0 "Chile"
+CHL_paternal_autocrat_DEF:0 "Nationalist Chile"
 CHL_national_populist:0 "Nationalist Chile"
 CHL_national_populist_ADJ:0 "Chilean"
 CHL_national_populist_DEF:0 "Nationalist Chile"
@@ -2445,9 +2445,9 @@ GNE_authoritarian_democrat_DEF:0 "Guinea"
 GNE_paternal_autocrat:0 "Guinea"
 GNE_paternal_autocrat_ADJ:0 "Guinean"
 GNE_paternal_autocrat_DEF:0 "Guinea"
-GNE_national_populist:0 "Fuuta Jaloo "
+GNE_national_populist:0 "Fuuta Jaloo"
 GNE_national_populist_ADJ:0 "Jaloo"
-GNE_national_populist_DEF:0 "Fuuta Jaloo "
+GNE_national_populist_DEF:0 "Fuuta Jaloo"
 
 GRE_totalist:0 "Hellenic Socialist Republic"
 GRE_totalist_ADJ:0 "Socialist-Hellenic"
@@ -3782,36 +3782,36 @@ MLT_social_conservatist:0 "Malta"
 MLT_social_conservatist_ADJ:0 "Maltese"
 MLT_social_conservatist_DEF:0 "Malta"
 
-MLW_totalist:0 "Socialist Republic of Malawi"
+MLW_totalist:0 "Maximist Malawi"
 MLW_totalist_ADJ:0 "Malawi"
-MLW_totalist_DEF:0 "The Socialist Republic of Malawi"
-MLW_syndicalist:0 "Socialist Republic of Malawi"
+MLW_totalist_DEF:0 "Maximist Malawi"
+MLW_syndicalist:0 "Syndical Republic of Malawi"
 MLW_syndicalist_ADJ:0 "Malawi"
-MLW_syndicalist_DEF:0 "The Socialist Republic of Malawi"
+MLW_syndicalist_DEF:0 "The Stndicalist Republic of Malawi"
 MLW_radical_socialist:0 "Socialist Republic of Malawi"
 MLW_radical_socialist_ADJ:0 "Malawi"
 MLW_radical_socialist_DEF:0 "The Socialist Republic of Malawi"
-MLW_social_democrat:0 "Federation of Malawi"
-MLW_social_democrat_ADJ:0 "Malawi"
-MLW_social_democrat_DEF:0 "The Federation of Malawi"
-MLW_social_liberal:0 "Federation of Malawi"
-MLW_social_liberal_ADJ:0 "Malawi"
-MLW_social_liberal_DEF:0 "The Federation of Malawi"
-MLW_market_liberal:0 "Federated States of Malawi"
-MLW_market_liberal_ADJ:0 "Malawi"
+MLW_social_democrat:0 "Nyasaland"
+MLW_social_democrat_ADJ:0 "Nyasalander"
+MLW_social_democrat_DEF:0 "Nyasaland"
+MLW_social_liberal:0 "Nyasaland"
+MLW_social_liberal_ADJ:0 "Nyasalander"
+MLW_social_liberal_DEF:0 "Nyasaland"
+MLW_market_liberal:0 "Nyasaland"
+MLW_market_liberal_ADJ:0 "Nyasalander"
 MLW_market_liberal_DEF:0 "The Federated States of Malawi"
-MLW_social_conservative:0 "Federation of Malawi"
-MLW_social_conservative_ADJ:0 "Malawi"
+MLW_social_conservative:0 "Nyasaland"
+MLW_social_conservative_ADJ:0 "Nyasalander"
 MLW_social_conservative_DEF:0 "The Federation of Malawi"
-MLW_authoritarian_democrat:0 "Sultanate of Malawi"
-MLW_authoritarian_democrat_ADJ:0 "Malawi"
-MLW_authoritarian_democrat_DEF:0 "The Sultanate of Malawi"
-MLW_paternal_autocrat:0 "Sultanate of Malawi"
-MLW_paternal_autocrat_ADJ:0 "Malawi"
-MLW_paternal_autocrat_DEF:0 "The Sultanate of Malawi"
-MLW_national_populist:0 "Malawi Empire"
-MLW_national_populist_ADJ:0 "Malawi"
-MLW_national_populist_DEF:0 "The Malawi Empire"
+MLW_authoritarian_democrat:0 "Nyasaland"
+MLW_authoritarian_democrat_ADJ:0 "Nyasalander"
+MLW_authoritarian_democrat_DEF:0 "Nyasaland"
+MLW_paternal_autocrat:0 "Milleranian Nyasaland"
+MLW_paternal_autocrat_ADJ:0 "Nyasalander"
+MLW_paternal_autocrat_DEF:0 "Milleranian Nyasaland"
+MLW_national_populist:0 "Maravi State"
+MLW_national_populist_ADJ:0 "Maravi"
+MLW_national_populist_DEF:0 "The Maravi Empire"
 
 MLY_totalist:0 "Socialist Republic of Malaya"
 MLY_totalist_ADJ:0 "Malay"
