Moar annexations stuff around belgium luxembourg siberia lithuania and thessaloniki

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -142,6 +142,7 @@ annex.48.t:0 "The Fate of Russia"
 annex.48.d:0 "After a long fight with the Russian state, we have launched a full offensive and forced the Russian armed forces to surrender. Moscow is now in our hands and fate of the Russian nation with it!"
 annex.48.a:0 "Liberate a Soviet Russia!"
 annex.48.b:0 "Liberate a friendly Russia!"
+annex.48.e:0 "Liberate Russia and Siberia"
 annex.48.c:0 "Occupy them!"
 annex.49.t:0 "The Future of Russia"
 annex.49.d:0 "With the negotiations about Russia's territory complete, it is now time to begin planning it's own course. The majority of our government has united in supporting Louis Ferdinand, the second son of Wilhelm III as he is married a daughter of Kyril Romanov. Several ministers have suggested the pro-German Pavel Bermondt-Avalov to lead Russia instead however. What shall be done?"
@@ -257,8 +258,8 @@ annex.72.e:0 "Continue with the occupation!"
 annex.73.t:0 "The Fate of Spain"
 annex.73.d:0 "On the aftermath of the recent conflicts, we ended up controlling a number of territories that once belonged to the Spanish state. What should we do about them now?"
 annex.73.a:0 "Hand them over to our Catholic brothers, the Carlists"
-annex.73.b:0 "Restore control to the Kingdom of Spain"
-annex.73.c:0 "The Carlists would be good allies"
+annex.73.c:0 "Restore control to the Kingdom of Spain"
+annex.73.b:0 "The Carlists would be good allies"
 annex.73.e:0 "Restore control to the CNT-FAI"
 annex.73.f:0 "Establish an independent Spanish Republic"
 annex.73.g:0 "Continue the occupation, we'll decide about that later"
@@ -623,6 +624,32 @@ annex.159.d:0 "After defeating the Union of Britain we now control Great Britain
 annex.159.a:0 "Divide the island between England, Scotland and Wales."
 annex.159.b:0 "Create a loyal Britain."
 annex.159.c:0 "Occupy everything!"
+annex.160.t:0 "A syndicalist Flanders-Wallonia"
+annex.160.d:0 "The French decided to give partial autonomy to Flanders-Wallonia, installing a new syndicalist government."
+annex.160.a:0 "Not a big change..."
+annex.161.t:0 "Fate of Belgium"
+annex.161.d:0 "After a short campaign across the fields of Belgium we now control the region and we must decide what to do with it. Belgium is a very divided country and splitting it along cultural lines might make for less trouble afterwards."
+annex.161.a:0 "Liberate a loyal Belgium"
+annex.161.b:0 "Liberate Flanders and Wallonia"
+annex.161.c:0 "Liberate Flanders"
+annex.162.t:0 "Southern Wallonia"
+annex.162.d:0 "TODO"
+annex.162.a:0 "Liberate Wallonia"
+annex.162.b:0 "Liberate Belgium"
+annex.162.c:0 "Return Southern Wallonia to Belgium"
+annex.163.t:0 "Fate of Luxembourg"
+annex.163.d:0 "The Grand Duchy of Luxembourg was formerly an independent state. During the Weltkrieg the German army occupied the Grand Duchy which was later incorporated into the German Empire as a new state. Now, with our dominance in Europe secured, it is in our power to undone the evils of the German military regime and liberate Luxembourg."
+annex.163.a:0 "Liberate Luxembourg"
+annex.163.b:0 "The whole of the Grand Duchy shall be integrated in Belgium"
+annex.164.t:0 "Fate of Lithuania"
+annex.164.d_revolt:0 "The revolt in the duchy of Lithuania is finally over and the German boots are now marching through the center of Vilnius. We have to make sure such a rebellion will never happen again by securing the area and purging the political area from subsersive persons. For now the decision that lies in our hands is: How to manage the territory we now occupy?"
+annex.164.d_norevolt:0 "Lithuania has been rebrought under our leadership and our troops occupy the area. We must now decide what to do with it."
+annex.164.a:0 "Release a loyal Lithuania"
+annex.165.t:0 "Fate of Thessaloniki"
+annex.165.d:0 "After our occupation of the area around Thessaloniki we were left with a dilemma concerning who should administrate the land. Should we transfer it to Greece or Bulgaria? Greece has an historical population in Thessaloniki but Bulgaria has now controlled it for more than 15 years and transferring the administration to it might be easier." 
+annex.165.a:0 "Transfer the territory to Bulgaria"
+annex.165.b:0 "Transfer the territory to Greece"
+annex.165.c:0 "Release an independent Greece"
 
 ### Opinion Modifiers ###
 refused_prince:0 "Refused prince"
