Get those Yan Mountains in so the Grand Marshal's men can scale them with these events!

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -272,7 +272,7 @@ FNG_Jehol_Border_Exercises_desc:0 "Border exercises not only reinforce disciplin
 FNG_Golden_Dragon_Cigarettes:0 "Golden Dragon Cigarettes"
 FNG_Golden_Dragon_Cigarettes_desc:0 "A variant of the already popular 'Golden Bat' cigarette, the Golden Dragon Cigarette could serve as an effective means of spreading addiction through the infusion of trace amounts of opium. All Doihara needs us to do is make the call."
 FNG_Shanhaiguan_Infiltration:0 "Shanhaiguan Infiltration"
-FNG_Shanhaiguan_Infiltration_desc:0 "With the Qing-Fengtian border heavily militarised, the German concession at Shanhaiguan serves as the only easy means of moving men and material behind Qing lines. Fortunately German security rarely pokes its nose into local affairs, and if lucky we might facilitate uprisings in Qing territory."
+FNG_Shanhaiguan_Infiltration_desc:0 "With the Qing-Fengtian border mountainous and heavily militarised, even an attack at Shanhaiguan will be difficult. Some have proposed that we might ease our entry by infiltrating units, which will rise up once war begins, and attack the Qing defenders from two sides."
 FNG_Escalate_the_Propaganda_War:0 "Escalate the Propaganda War"
 FNG_Escalate_the_Propaganda_War_desc:0 "Fengtian and Qing have sustained an intermittent propaganda war for the past eight years. Due to the persistent and often exaggerated nature of threats from both sides, and their consistent failure to develop far beyond words, the wider international community has ceased to take them very seriously."
 FNG_The_Grand_Marshals_Proclamation:0 "The Grand Marshal's Proclamation"
@@ -853,6 +853,31 @@ fengtian.new.102.a:0 ""
 fengtian.new.103.t:0 ""
 fengtian.new.103.d:0 ""
 fengtian.new.103.a:0 ""
+
+fengtian.new.104.t:0 ""
+fengtian.new.104.d:0 ""
+fengtian.new.104.a:0 ""
+
+fengtian.new.105.t:0 ""
+fengtian.new.105.d:0 ""
+fengtian.new.105.a:0 ""
+
+fengtian.new.106.t:0 ""
+fengtian.new.106.d:0 ""
+fengtian.new.106.a:0 ""
+
+fengtian.new.107.t:0 ""
+fengtian.new.107.d:0 ""
+fengtian.new.107.a:0 ""
+
+fengtian.new.108.t:0 ""
+fengtian.new.108.d:0 ""
+fengtian.new.108.a:0 ""
+
+fengtian.new.109.t:0 ""
+fengtian.new.109.d:0 ""
+fengtian.new.109.a:0 ""
+
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
